# next-gen-multi-agentic-orchestrator

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  e2e.yml  nightly.yml
docs/: rapids-v2-feature-coverage-addendum.md  rapids-v2-plugin-system-alignment.md  rapids-v2-testing-strategy-detailed.md
marketplace/: marketplace.json
rapids-core/: .lsp.json  .mcp.json  settings.json
rapids-core/.claude-plugin/: plugin.json
rapids-core/activities/: analysis.yaml  deploy.yaml  implement.yaml  plan.yaml  research.yaml  sustain.yaml
rapids-core/agents/: rapids-lead.md  self-improve.md
rapids-core/hooks/: hooks.json
rapids-core/personas/: personas.yaml
rapids-core/schemas/: dependency-graph.schema.json  feature-spec.xsd  journal-entry.schema.json
rapids-core/scripts/: activity-manager.sh  agent-team-orchestrator.sh  artifact-validator.sh  ascii-banner.sh  batch-dispatcher.sh  claude-md-generator.sh  control-tower.sh  cost-tracker.sh  dependency-graph-generator.sh  feature-progress.sh  knowledge-fabric.sh  lineage.sh  project-registry.sh  scope-classifier.sh  session-manager.sh  wave-computer.sh  work-item-manager.sh  worktree-manager.sh
rapids-gcp/: .lsp.json  rapids.plugin.json
rapids-gcp/.claude-plugin/: plugin.json
rapids-gcp/agents/: gcp-architect.md  terraform-engineer.md
rapids-gcp/evals/: quality-evals.yaml  trigger-evals.json
rapids-gcp/hooks/: hooks.json
rapids-gcp/templates/: gcp-architecture.md  terraform-module.tf
src/rapids_core/: __init__.py  activity_manager.py  artifact_validator.py  (+28 more)
tests/: conftest.py
(+70 files in other folders)
