[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rapids-core"
version = "0.1.0"
description = "RAPIDS orchestration engine — structured AI-assisted software delivery"
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.0",
    "jsonschema>=4.20",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
]
smoke = [
    "anthropic>=0.40",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "f1: Pure logic tests (zero LLM)",
    "f2: Hook integration tests (zero LLM)",
    "f3: Recorded replay tests (zero LLM)",
    "f4: LLM smoke tests (requires API key)",
    "f5: Full E2E tests (requires Docker)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.hatch.build.targets.wheel]
packages = ["src/rapids_core"]
